--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
   "num_of_gens": 20,
   "pop_specs": {
-    "pop_size": 50,
-    "RF_pop_rate": 100,
-    "DL_pop_rate": 0
+    "pop_size": 25,
+    "RF_pop_rate": 50,
+    "DL_pop_rate": 50
   },
   "reproduction_specs": {
-    "keep_rate": 40,
-    "mutation_rate": 25,
+    "keep_rate": 30,
+    "mutation_rate": 35,
     "randomize_num_of_genes_to_mutate": false,
     "crossover_rate": 35,
     "crossover_points": [
@@ -17,76 +17,72 @@
   },
   "RF": {
     "ntrees": {
-      "min_value": 10,
-      "max_value": 50,
+      "min_value": 300,
+      "max_value": 500,
       "type": "integer"
     },
     "max_depth": {
-      "min_value": 0,
-      "max_value": 20,
+      "min_value": 25,
+      "max_value": 35,
       "type": "integer"
     },
     "min_rows": {
-      "min_value": 1,
-      "max_value": 20,
+      "min_value": 5,
+      "max_value": 15,
       "type": "integer"
     },
     "sample_rate": {
-      "min_value": 0,
-      "max_value": 1,
+      "min_value": 0.6,
+      "max_value": 0.8,
       "type": "float"
     },
     "col_sample_rate_per_tree": {
-      "min_value": 0,
-      "max_value": 1,
+      "min_value": 0.5,
+      "max_value": 0.8,
       "type": "float"
     },
     "max_runtime_secs": {
-      "min_value": 3,
-      "max_value": 5,
+      "min_value": 20,
+      "max_value": 100,
       "type": "integer"
     }
   },
   "DL": {
     "activation": [
       "tanh",
-      "tanh_with_dropout",
-      "rectifier",
-      "rectifier_with_dropout",
-      "maxout",
-      "maxout_with_dropout"
+      "rectifier"
     ],
     "hidden": [
       [
-        100,
-        100
-      ],
-      [
         200,
         200
+      ],
+      [
+        300,
+        300,
+        300
       ]
     ],
     "input_dropout_ratio": [
-      0,
       0.1,
       0.2
     ],
     "l1": [
-      0,
+      1e-4,
       1e-5
     ],
     "l2": [
-      0,
+      1e-4,
       1e-5
     ],
     "epochs": {
       "min_value": 10,
-      "max_value": 20,
+      "max_value": 50,
       "type": "integer"
     },
     "max_runtime_secs": {
-      "min_value": 3,
-      "max_value": 5,
+      "min_value": 20,
+      "max_value": 100,
       "type": "integer"
     }
   }
