--- a/config.json
+++ b/config.json
@@ -1,19 +1,16 @@
 {
   "num_of_gens": 20,
   "pop_specs": {
-    "pop_size": 10,
-    "RF_pop_rate": 50,
-    "DL_pop_rate": 50
+    "pop_size": 20,
+    "RF_pop_rate": 33,
+    "DL_pop_rate": 33,
+    "GBM_pop_rate": 34
   },
   "reproduction_specs": {
     "keep_rate": 10,
-    "mutation_rate": 50,
+    "mutation_rate": 40,
     "randomize_num_of_genes_to_mutate": false,
-    "crossover_rate": 40,
-    "crossover_points": [
-      20,
-      80
-    ]
+    "crossover_rate": 40
   },
   "RF": {
     "ntrees": {
@@ -41,6 +38,10 @@
       "max_value": 0.8,
       "type": "float"
     },
+    "nfolds": [
+      0,
+      5
+    ],
     "max_runtime_secs": [
       180
     ]
@@ -78,6 +79,40 @@
       "max_value": 50,
       "type": "integer"
     },
+    "max_runtime_secs": [
+      180
+    ]
+  },
+  "GBM": {
+    "ntrees": {
+      "min_value": 10,
+      "max_value": 50,
+      "type": "integer"
+    },
+    "max_depth": {
+      "min_value": 25,
+      "max_value": 35,
+      "type": "integer"
+    },
+    "min_rows": {
+      "min_value": 5,
+      "max_value": 15,
+      "type": "integer"
+    },
+    "sample_rate": {
+      "min_value": 0.6,
+      "max_value": 0.8,
+      "type": "float"
+    },
+    "col_sample_rate_per_tree": {
+      "min_value": 0.5,
+      "max_value": 0.8,
+      "type": "float"
+    },
+    "nfolds": [
+      0,
+      5
+    ],
     "max_runtime_secs": [
       180
     ]
