--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
   "num_of_gens": 20,
   "pop_specs": {
-    "pop_size": 20,
-    "RF_pop_rate": 33,
-    "DL_pop_rate": 33,
-    "GBM_pop_rate": 34
+    "pop_size": 10,
+    "RF_pop_rate": 0,
+    "DL_pop_rate": 0,
+    "GBM_pop_rate": 100
   },
   "reproduction_specs": {
-    "keep_rate": 10,
-    "mutation_rate": 40,
+    "keep_rate": 5,
+    "mutation_rate": 60,
     "randomize_num_of_genes_to_mutate": false,
-    "crossover_rate": 40
+    "crossover_rate": 45
   },
   "RF": {
     "ntrees": {
@@ -43,78 +43,72 @@
       5
     ],
     "max_runtime_secs": [
-      180
+      300
     ]
   },
   "DL": {
+    "ignore_const_cols": [
+      true
+    ],
+    "distribution": [
+      "multinomial"
+    ],
+    "nfolds": [
+      5
+    ],
     "activation": [
-      "tanh",
       "rectifier"
     ],
     "hidden": [
       [
         200,
+        200,
         200
-      ],
-      [
-        300,
-        300,
-        300
       ]
     ],
     "input_dropout_ratio": [
-      0.1,
       0.2
     ],
+    "sparse": [
+      true
+    ],
     "l1": [
-      1e-4,
       1e-5
     ],
-    "l2": [
-      1e-4,
-      1e-5
+    "epochs": [
+      50
     ],
-    "epochs": {
-      "min_value": 10,
-      "max_value": 50,
-      "type": "integer"
-    },
     "max_runtime_secs": [
-      180
+      300
     ]
   },
   "GBM": {
-    "ntrees": {
-      "min_value": 10,
-      "max_value": 50,
-      "type": "integer"
-    },
-    "max_depth": {
-      "min_value": 25,
-      "max_value": 35,
-      "type": "integer"
-    },
-    "min_rows": {
-      "min_value": 5,
-      "max_value": 15,
-      "type": "integer"
-    },
-    "sample_rate": {
-      "min_value": 0.6,
-      "max_value": 0.8,
-      "type": "float"
-    },
-    "col_sample_rate_per_tree": {
-      "min_value": 0.5,
-      "max_value": 0.8,
-      "type": "float"
-    },
+    "ignore_const_cols": [
+      true
+    ],
+    "distribution": [
+      "multinomial"
+    ],
     "nfolds": [
-      0,
       5
     ],
-    "max_runtime_secs": [
-      180
+    "ntrees": [
+      150
+    ],
+    "learn_rate": [
+      0.1
+    ],
+    "max_depth": [
+      10
+    ],
+    "min_rows": [
+      10
+    ],
+    "sample_rate": [
+      0.7
+    ],
+    "col_sample_rate": [
+      0.7
     ]
   }
 }
