--- a/config.json
+++ b/config.json
@@ -41,6 +41,14 @@
     "sample_rate": [
       0.7,
       0.8
+    ],
+    "max_runtime_secs": [
+      0,
+      20,
+      40,
+      80,
+      160,
+      320
     ]
   },
   "DL": {
@@ -64,13 +72,19 @@
         100
       ],
       [
-        200,
-        200
+        100,
+        100
       ],
       [
-        300,
-        300,
-        300
+        100,
+        100,
+        100
+      ],
+      [
+        100,
+        100,
+        100,
+        100
       ]
     ],
     "input_dropout_ratio": [
@@ -91,6 +105,14 @@
       100,
       200,
       300
+    ],
+    "max_runtime_secs": [
+      0,
+      20,
+      40,
+      80,
+      160,
+      320
     ]
   },
   "GBM": {
@@ -131,6 +153,14 @@
     "col_sample_rate": [
       0.7,
       0.8
+    ],
+    "max_runtime_secs": [
+      0,
+      20,
+      40,
+      80,
+      160,
+      320
     ]
   }
 }
