--- a/config.json
+++ b/config.json
@@ -1,16 +1,20 @@
 {
-  "num_of_gens": 10,
+  "num_of_gens": 2,
   "pop_specs": {
     "pop_size": 10,
-    "RF_pop_rate": 33,
-    "DL_pop_rate": 33,
-    "GBM_pop_rate": 34
+    "RF_pop_ratio": 33,
+    "DL_pop_ratio": 33,
+    "GBM_pop_ratio": 34
   },
   "reproduction_specs": {
-    "keep_rate": 5,
-    "mutation_rate": 60,
+    "keep_ratio": 5,
+    "mutation_ratio": 60,
     "randomize_num_of_genes_to_mutate": false,
-    "crossover_rate": 45
+    "crossover_ratio": 45
+  },
+  "model_training": {
+    "dataset_ratio": 0.1,
+    "train_data_ratio": 0.75
   },
   "RF": {
     "ignore_const_cols": [
@@ -43,12 +47,7 @@
       0.8
     ],
     "max_runtime_secs": [
-      0,
-      20,
-      40,
-      80,
-      160,
-      320
+      5
     ]
   },
   "DL": {
@@ -69,22 +68,29 @@
     ],
     "hidden": [
       [
-        100
-      ],
-      [
-        100,
-        100
-      ],
-      [
         100,
         100,
         100
       ],
       [
-        100,
-        100,
-        100,
-        100
+        200,
+        200,
+        200
+      ],
+      [
+        300,
+        300,
+        300
+      ],
+      [
+        400,
+        400,
+        400
+      ],
+      [
+        500,
+        500,
+        500
       ]
     ],
     "input_dropout_ratio": [
@@ -107,12 +113,7 @@
       300
     ],
     "max_runtime_secs": [
-      0,
-      20,
-      40,
-      80,
-      160,
-      320
+      5
     ]
   },
   "GBM": {
@@ -155,12 +156,7 @@
       0.8
     ],
     "max_runtime_secs": [
-      0,
-      20,
-      40,
-      80,
-      160,
-      320
+      5
     ]
   }
 }
