--- a/config.json
+++ b/config.json
@@ -1,19 +1,19 @@
 {
-  "num_of_gens": 2,
+  "num_of_gens": 10,
   "pop_specs": {
-    "pop_size": 2,
+    "pop_size": 10,
     "RF_pop_ratio": 33,
-    "DL_pop_ratio": 0,
-    "GBM_pop_ratio": 0
+    "DL_pop_ratio": 33,
+    "GBM_pop_ratio": 34
   },
   "reproduction_specs": {
-    "keep_ratio": 0,
-    "mutation_ratio": 100,
+    "keep_ratio": 5,
+    "mutation_ratio": 65,
     "randomize_num_of_genes_to_mutate": false,
-    "crossover_ratio": 0
+    "crossover_ratio": 30
   },
   "model_training": {
-    "dataset_ratio": 0.1,
+    "dataset_ratio": 0.5,
     "train_data_ratio": 0.75
   },
   "RF": {
@@ -42,8 +42,14 @@
       0.7,
       0.8
     ],
-    "max_runtime_secs": [
-      5
+    "stopping_rounds": [
+      3
+    ],
+    "stopping_metric": [
+      "logloss"
+    ],
+    "stopping_tolerance": [
+      0.01
     ]
   },
   "DL": {
@@ -54,16 +60,10 @@
       "multinomial"
     ],
     "activation": [
-      "tanh",
-      "rectifier_with_dropout",
-      "rectifier"
+      "rectifier",
+      "rectifier_with_dropout"
     ],
     "hidden": [
-      [
-        100,
-        100,
-        100
-      ],
       [
         200,
         200,
@@ -78,11 +78,6 @@
         400,
         400,
         400
-      ],
-      [
-        500,
-        500,
-        500
       ]
     ],
     "input_dropout_ratio": [
@@ -96,16 +91,19 @@
       1e-5
     ],
     "l2": [
-      1e-5
+      1e-7
     ],
     "epochs": [
-      50,
-      100,
-      200,
-      300
+      100
     ],
-    "max_runtime_secs": [
-      5
+    "stopping_rounds": [
+      3
+    ],
+    "stopping_metric": [
+      "logloss"
+    ],
+    "stopping_tolerance": [
+      0.01
     ]
   },
   "GBM": {
@@ -116,8 +114,8 @@
       "multinomial"
     ],
     "ntrees": {
-      "min_value": 50,
-      "max_value": 100,
+      "min_value": 20,
+      "max_value": 50,
       "type": "integer"
     },
     "learn_rate": {
@@ -143,8 +141,14 @@
       0.7,
       0.8
     ],
-    "max_runtime_secs": [
-      5
+    "stopping_rounds": [
+      3
+    ],
+    "stopping_metric": [
+      "logloss"
+    ],
+    "stopping_tolerance": [
+      0.01
     ]
   }
 }
